--- a/l/lo/loc/localtemptation.com.html
+++ b/l/lo/loc/localtemptation.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the localtemptation.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119015401id_/http%3A//www.localtemptation.com/site/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the localtemptation.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606011753id_/http%3A//www.localtemptation.com/site/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -16,29 +16,30 @@
 
         <!--[if lt IE 8]>
     <link
-        href="/themes/localtemptation/sass/stylesheets/ie7.css?t=1479474779"
+        href="/themes/localtemptation/sass/stylesheets/ie7.css?t=1496685604"
         rel="stylesheet" type="text/css">
     <![endif]-->
 
     <!--[if IE 8]>
     <link
-        href="/themes/localtemptation/sass/stylesheets/ie8.css?t=1479474779"
+        href="/themes/localtemptation/sass/stylesheets/ie8.css?t=1496685604"
         rel="stylesheet" type="text/css">
     <![endif]-->
 
     <!--[if gt IE 8]>
     <link
-        href="/themes/localtemptation/sass/stylesheets/ie9.css?t=1479474779"
+        href="/themes/localtemptation/sass/stylesheets/ie9.css?t=1496685604"
         rel="stylesheet" type="text/css">
     <![endif]-->
 
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
 
     <script src="//web.archive.org/web/20170310203513/http://d37gvrvc0wt4s1.cloudfront.net/js/v1.1/rollbar.min.js" async=""></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 	<script type="text/javascript">window.jQuery || document.write('<script type="text/javascript" src="/themes/localtemptation/js/libs/jquery/1.7.1/jquery.min.js"><\/script>')</script><script type="text/javascript" src="/themes/localtemptation/js/libs/jquery/1.7.1/jquery.min.js"></script>
+
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 	<script type="text/javascript">window.jQuery.ui || document.write('<script type="text/javascript" src="/themes/localtemptation/js/libs/jqueryui/1.8.16/jquery-ui.min.js"><\/script>')</script><script type="text/javascript" src="/themes/localtemptation/js/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 
     <script type="text/javascript">
@@ -46,9 +47,9 @@
 var _rollbarConfig = {"accessToken":"d4ec63b4243d4be384e69f5330e44094","captureUncaught":true,"payload":{"environment":"Production","notifier":{"plugins":{"jquery":{"ignoreAjaxErrors":true}}}}};
 /*]]>*/
 </script>
-    <script type="text/javascript">var globalParams={"userInfo":[],"siteName":"localtemptation","baseUrl":"\/themes\/localtemptation","siteUrl":"http:\/\/www.localtemptation.com\/","rootUrl":"\/themes\/","changeUsernameUrl":"\/profile\/changeUsername","changeUserLocationUrl":"\/profile\/changeLocation","removeUploadStepUrl":"\/event\/removeRegistrationUploadStep","removeUploadNoticeUrl":"\/event\/removeRegistrationUploadNotice","removeSafeModeNoticeUrl":"\/event\/removeSafeModeNotice","registrationUrl":"\/registration\/index","setSafeModeUrl":"\/profile\/setSafeMode","logJsErrorUrl":"\/site\/logJsError","devMode":"0","isMobile":"0","isGuest":"1","gaEventUrl":"\/jsevent.html","tmRequestDataUrl":"http:\/\/www.tmtrck.com\/default\/userInformation","tmSaveDataUrl":"\/site\/saveTMData","pnlUpdateProductUrl":"https:\/\/secure.processing.net\/publicApi\/updateProduct","tmFixCampaignId":"45832","tmVisitId":"0","tmSubId":"","tmSubId2":"","tmKeyword":"","maxMessageChars":"1000","maxUpdateChars":"140","maxAbuseChars":"2000","repositionWidget":"","ajaxLoader":"\/themes\/localtemptation\/images\/ajax_loader.gif","ajaxStatus":{"ok":"ok","empty":"empty","error":"error","redirect":"redirect"},"noPhotoImg":"\/themes\/localtemptation\/images\/no_photo_{gender}_{size}.png","useOpenStreetMap":"","useBlurForMessages":"","pusherKey":"","gaEvents":{"popupOpen":"open_popup","landingPopupOpen":"open_landing_popup","registerStep1Success":"register_step_1_success","registerStep2Success":"register_step_2_success","registerStep3Success":"register_step_3_success","registerStep3Cancel":"register_step_3_skip"},"searchToolTipMessage":"Thousands of members are waiting for you. <a href=\"\/search\">Start your search now!<\/a>","safeModeNoticeMessage":"Sexual profiles are hidden! - <a href=\"\/profile\/setSafeMode\" id=\"enableSexyModeButton\">Click here<\/a> to enable adult content.","uploadNoticeMessage":"You haven't uploaded a picture yet. <a href=\"\/profile\/edit\/page\/managePhotos\" id=\"notice-upload-a-photo-link\">Upload a photo<\/a> and make a first good impression."};</script>
-    <link rel="stylesheet" type="text/css" href="/themes/localtemptation/sass/stylesheets/lt.css?t=1479474779" media="screen, projection">
-<link rel="stylesheet" type="text/css" href="/assets/29570780/source/jquery.fancybox.css?t=1479474779">
+    <script type="text/javascript">var globalParams={"userInfo":[],"siteName":"localtemptation","baseUrl":"\/themes\/localtemptation","siteUrl":"http:\/\/www.localtemptation.com\/","rootUrl":"\/themes\/","changeUsernameUrl":"\/profile\/changeUsername","changeUserLocationUrl":"\/profile\/changeLocation","removeUploadStepUrl":"\/event\/removeRegistrationUploadStep","removeUploadNoticeUrl":"\/event\/removeRegistrationUploadNotice","removeSafeModeNoticeUrl":"\/event\/removeSafeModeNotice","registrationUrl":"\/registration\/index","setSafeModeUrl":"\/profile\/setSafeMode","devMode":"0","isMobile":"0","isGuest":"1","gaEventUrl":"\/jsevent.html","tmRequestDataUrl":"http:\/\/www.tmtrck.com\/default\/userInformation","tmSaveDataUrl":"\/site\/saveTMData","pnlUpdateProductUrl":"https:\/\/secure.processing.net\/publicApi\/updateProduct","tmFixCampaignId":"45832","tmVisitId":"0","tmSubId":"","tmSubId2":"","tmKeyword":"","maxMessageChars":"1000","maxUpdateChars":"140","maxAbuseChars":"2000","repositionWidget":"","ajaxLoader":"\/themes\/localtemptation\/images\/ajax_loader.gif","ajaxStatus":{"ok":"ok","empty":"empty","error":"error","redirect":"redirect"},"noPhotoImg":"\/themes\/localtemptation\/images\/no_photo_{gender}_{size}.png","useOpenStreetMap":"","useBlurForMessages":"","pusherKey":"","minAgeForSugarDaddy":"35","gaEvents":{"popupOpen":"open_popup","landingPopupOpen":"open_landing_popup","registerStep1Success":"register_step_1_success","registerStep2Success":"register_step_2_success","registerStep3Success":"register_step_3_success","registerStep3Cancel":"register_step_3_skip"},"searchToolTipMessage":"Thousands of members are waiting for you. <a href=\"\/search\">Start your search now!<\/a>","safeModeNoticeMessage":"Sexual profiles are hidden! - <a href=\"\/profile\/setSafeMode\" id=\"enableSexyModeButton\">Click here<\/a> to enable adult content.","uploadNoticeMessage":"You haven't uploaded a picture yet. <a href=\"\/profile\/edit\/page\/managePhotos\" id=\"notice-upload-a-photo-link\">Upload a photo<\/a> and make a first good impression."};</script>
+    <link rel="stylesheet" type="text/css" href="/themes/localtemptation/sass/stylesheets/lt.css?t=1496685604" media="screen, projection">
+<link rel="stylesheet" type="text/css" href="/assets/29570780/source/jquery.fancybox.css?t=1496685604">
 <script type="text/javascript" src="/assets/e4f7217/jquery.autoresize.js"></script>
 <script type="text/javascript" src="/assets/e67dea82/jquery.json.js"></script>
 <script type="text/javascript" src="/assets/92f5be57/jquery.address.js"></script>
@@ -62,8 +63,8 @@ var _rollbarConfig = {"accessToken":"d4ec63b4243d4be384e69f5330e44094","captureU
 <script type="text/javascript" src="/assets/4992718/jquery.dropdownBox.js"></script>
 <script type="text/javascript" src="/assets/76c9b055/jquery.counter.js"></script>
 <script type="text/javascript" src="/assets/84971534/jquery.doomNotify.js"></script>
-<script type="text/javascript" src="/themes/localtemptation/js/app.js"></script>
-<script type="text/javascript" src="/themes/localtemptation/js/general.js"></script>
+<script type="text/javascript" src="/themes/localtemptation/js/app.js?t=1496685604"></script>
+<script type="text/javascript" src="/themes/localtemptation/js/general.js?t=1496685604"></script>
 <title>LocalTemptation        - Spice up your life with a discreet encounter!</title>
 
     
@@ -100,7 +101,42 @@ ga('send', 'pageview');
 	</script>
 </head>
 <body>
-	    <div id="newMessagePopup" style="display: none">
+	<div id="contentWarningPopup" class="contentWarningPopup" style="display: none;">
+	<a class="closePopup" href="#">Close</a>
+	<div class="header">
+		<div class="icon"></div>
+		<div class="error"><span>ERROR:</span> Description not submitted</div>
+		<div class="reason">Reason: <span class="reasonText"></span></div>
+		<div class="adultText"></div>
+	</div>
+	<div class="content">
+		<div class="edit">Please edit your description below and resubmit for approval:</div>
+		<form action="/profile/save" method="POST" class="changeDescriptionForm" id="changeDescriptionForm">
+			<input type="hidden" name="onlyDescription" value="1">
+			<div class="description">
+				<textarea name="EditProfileForm[selfDescription]" id="EditProfileForm_selfDescription" class="descriptionText"></textarea>
+			</div>
+			<button type="submit" class="changeDescriptionBtn">Resubmit</button>
+		</form>
+		<div class="alert"><div class="icon"></div><div class="text">Error: we still detected content which is not allowed, please edit your description</div></div>
+	</div>
+	<div class="footer">
+		<p><span>Note:</span> all content is reviewed by a real person before we put it live so including any type
+			of contact info or asking for contact info will result in your full description being rejected.</p>
+	</div>
+</div>
+
+<div id="confirmSaveDescriptionPopup" class="contentWarningPopup" style="display: none;">
+	<a class="closePopup" href="#">Close</a>
+	<div class="descriptionSaved">
+		<div class="icon"></div>
+		<div class="text">Congratulations!</div>
+		<div class="submitted">Your description has been submitted for approval successfully!</div>
+	</div>
+	<div class="footer">
+		<p><span>Note:</span> your description will be reviewed by a real person in the next hour.</p>
+	</div>
+</div>	    <div id="newMessagePopup" style="display: none">
 	</div>
     <div id="globalWrapper" class="siteWrapper guest">
 		<div id="topContainer">
@@ -186,67 +222,48 @@ ga('send', 'pageview');
 
 	<a name="youinfo"></a>
 	<h4>5. Your use of Other Users' Information</h4>
-
-	<p>You may not use other user's information for commercial purposes, to spam, to harass, or to make unlawful threats. We reserve the right to terminate those who misuse other user's information or who otherwise violate the <a href="/site/terms">Terms of Service</a>.</p>
+	<p>You may not use other user's information for commercial purposes, to spam, to harass, or to make unlawful threats. We reserve the right to terminate those who misuse other user's information or who otherwise violate the <a href="/site/terms" rel="nofollow">Terms of Service</a>.</p>
 
 	<a name="pass"></a>
 	<h4>6. Control of Your Password</h4>
-
 	<p>You may not disclose your password to any third parties or share it with any third parties. If, despite the foregoing, you lose control of your password, you may lose substantial control over your personally identifiable information and may be subject to legally binding actions taken on your behalf. Therefore, if your password has been compromised for any reason, you should immediately change your password.</p>
 
 	<a name="change"></a>
 	<h4>7. Reviewing and Changing Your Personally Identifiable Information</h4>
-
 	<p>Once you register, you will be able to review and change much of your personally identifiable information including:</p>
-
 	<ul>
 		<li>Your email address</li>
 		<li>Your city, state, zip code, country</li>
 		<li>Your password</li>
 		<li>Your profile</li>
 	</ul>
-
 	<p>Please promptly update your information if it changes by logging in to your account and following the screen prompts. We strongly urge you to periodically change your password to help reduce the risk of unauthorized access to your account information.</p>
-
-	<p>Upon your request, we will remove your credit card number and credit card expiration date from our main databases. To make this request, email us at <a href="mailto:support@localtemptation.com">support@localtemptation.com</a>. We will retain in our files information, including credit card information, you have requested to remove in some circumstances, such as to resolve disputes, troubleshoot problems, comply with Credit Card Merchant Banking and Association Agreements, enhance security, reduce fraud, comply with Federal and State Law, and to enforce our <a href="/site/terms">Terms of Service Agreement</a>.</p>
+	<p>Upon your request, we will remove your credit card number and credit card expiration date from our main databases. To make this request, email us at <a href="mailto:support@localtemptation.com">support@localtemptation.com</a>. We will retain in our files information, including credit card information, you have requested to remove in some circumstances, such as to resolve disputes, troubleshoot problems, comply with Credit Card Merchant Banking and Association Agreements, enhance security, reduce fraud, comply with Federal and State Law, and to enforce our <a href="/site/terms" rel="nofollow">Terms of Service Agreement</a>.</p>
 
 	<a name="third"></a>
 	<h4>8. Third Party Collections of Information</h4>
-
-	<p>Our policy only addresses the use and disclosure of information we collect from you. To the extent that you disclose your information to other parties on our system or other sites throughout the Internet, different rules may apply to their use or disclosure of the personal information you disclose to them. While we are working closely with our partners to ensure the highest privacy to you, we encourage you to ask questions before you disclose your personal information to others.
-We may use third-party advertising companies to serve ads on our behalf. These companies may employ cookies and action tags (also known as single pixel gifs or web beacons) to measure advertising effectiveness.</p>
+	<p>Our policy only addresses the use and disclosure of information we collect from you. To the extent that you disclose your information to other parties on our system or other sites throughout the Internet, different rules may apply to their use or disclosure of the personal information you disclose to them. While we are working closely with our partners to ensure the highest privacy to you, we encourage you to ask questions before you disclose your personal information to others. We may use third-party advertising companies to serve ads on our behalf. These companies may employ cookies and action tags (also known as single pixel gifs or web beacons) to measure advertising effectiveness.</p>
 
 	<a name="sec"></a>
 	<h4>9. Security</h4>
-
 	<p>We have security measures in place to protect and prevent the loss, misuse, and alteration of the information under our control. We use industry standard efforts to safeguard the confidentiality of your personal identifiable information such as firewalls. While 'perfect security' does not exist on the Internet, our technical experts work hard to ensure your secure use of our services.</p>
 
 	<a name="up"></a>
 	<h4>10. Update/Delete</h4>
-
 	<p>You have the following choices to modify or delete your profile information from our database:</p>
-
 	<ul>
 		<li>Send an email to <a href="mailto:support@localtemptation.com">Customer Service</a>;</li>
 		<li>Log in with your password and modify your profile;</li>
 	</ul>
+
 	<a name="opt"></a>
 	<h4>11. Opt-out provisions</h4>
-
 	<p>You can unsubscribe at any time by clicking the 'unsubscribe' link at the bottom of our mails.
 		When clicking the unsubscribe link, you will be instantly removed from all the mailing lists of HK International.
 		You can also choose to opt-out through the email preference center of your profile by clicking on 'Account Settings' when logged in.
 	</p>
 
-	<br>
-	<h4>Our address:</h4>
-	<p>
-		HK International Limited<br>
-        PO Box 440<br>
-        Envoy House, La Vrangue<br>
-        St Peter Port<br>
-        Guernsey<br>
-        GY1 3ZN	</p>
+    	<p></p>
 </div>
 			</div>
 		</div>
@@ -261,7 +278,7 @@ We may use third-party advertising companies to serve ads on our behalf. These c
 				About			</a>
 		</li>
 		<li>
-			<a href="http://www.localtemptation.com/site/terms">
+			<a href="http://www.localtemptation.com/site/terms" rel="nofollow">
 				Terms			</a>
 		</li>
 		<li>
@@ -270,14 +287,9 @@ We may use third-party advertising companies to serve ads on our behalf. These c
 		</li>
 	</ul>
 	<div class="contentFooter">
-		<p>
-			© 2016&nbsp;
-            HK International Limited                                           / LocalTemptation.com
-            PO Box 440,
-            Envoy House, La Vrangue,
-            St Peter Port,
-            Guernsey,
-            GY1 3ZN		</p>
+		<p class="address">
+			© 2017&nbsp;HK International Limited / LocalTemptation.com
+					</p>
 		<p>
 			<a href="http://www.localtemptation.com/site/2257Notice">
 				18 U.S.C. 2257 Record-Keeping Requirements Compliance Statement.			</a>
@@ -325,7 +337,8 @@ We may use third-party advertising companies to serve ads on our behalf. These c
 <script type="text/javascript" src="/assets/9586d078/jquery.rollbar.js"></script>
 <script type="text/javascript" src="/assets/29570780/lib/jquery.mousewheel-3.0.6.pack.js"></script>
 <script type="text/javascript" src="/assets/29570780/source/jquery.fancybox.pack.js"></script>
-<script type="text/javascript" src="/themes/js/generalScript.js"></script>
+<script type="text/javascript" src="/themes/js/generalScript.js?t=1496685604"></script>
+<script type="text/javascript" src="/themes/js/genericScript.js?t=1496685604"></script>
 
 
 </body></html>
