--- a/i/in/ins/insectidentification.org.html
+++ b/i/in/ins/insectidentification.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the insectidentification.org privacy policy that was archived on 2016-11-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161123203425id_/http%3A//www.insectidentification.org/privacy-policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the insectidentification.org privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606011753id_/http%3A//www.insectidentification.org/privacy-policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en-US"><head>
 <meta charset="UTF-8">
@@ -14,31 +14,12 @@
 <meta property="og:image" content="http://www.insectidentification.org/imgs/insects/fiery-skipper_3.jpg">
 <meta property="og:url" content="http://www.insectidentification.org/privacy-policy.asp">
 <meta property="og:description" content="InsectIdentification.org Site Privacy Policy page."><!-- 297 Character Limit -->
-<!-- Google Analytics START -->
-<script type="text/javascript" async="" src="https://www.google.com/cse/cse.js?cx=partner-pub-5604186322601931:4778528606"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-864198-6', 'insectidentification.org'); ga('send', 'pageview');</script>
-<!-- Google Analytics END -->
-<!-- !!!!!!!!!!!!!!!!!!!!!!GOOGLEPLUS!!!!!!!!!!!!!!!!!!!! -->
-<script type="text/javascript">(function() {var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true; po.src = 'https://apis.google.com/js/plusone.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();</script>
-<!-- !!!!!!!!!!!!!!!!!!!!!!GOOGLEPLUS!!!!!!!!!!!!!!!!!!!! -->
+<!--Analytics--><script type="text/javascript" async="" src="https://www.google.com/cse/cse.js?cx=partner-pub-5604186322601931:4778528606"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-864198-6', 'insectidentification.org'); ga('send', 'pageview');</script><!--Analytics--><script type="text/javascript">(function() {var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true; po.src = 'https://apis.google.com/js/plusone.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();</script>
 </head>
 <body>
 <!-- google_ad_section_start -->
 <!-- !!!!!!!!!!!!!!!!!!!!!!HEADER!!!!!!!!!!!!!!!!!!!!!! -->
-<div style="width:100%; background-color:#ffffff; padding:0.25%;">
-<div style="max-width:1200px; margin-left:auto; margin-right:auto;">
-<div id="logoImgHolder"><a href="http://www.insectidentification.org/" title="Insect Identification"><img src="/imgs/design/logo.png" alt="Insect Identification" width="280" height="113" border="0"></a></div>
-<div id="searchBlockHolder">
-<script>(function() {var cx = 'partner-pub-5604186322601931:4778528606'; var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true; gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//www.google.com/cse/cse.js?cx=' + cx; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);})();</script><gcse:searchbox-only></gcse:searchbox-only>
-</div><!-- Search Form Container END -->
-</div>
-</div>
-<div id="hdrLdrbrdAdHolder">
-<!--Leaderboard Ad Block START-->
-<div id="casaleLdrbrd728">
-<script id="mNCC" language="javascript">  medianet_width='728';  medianet_height= '90';  medianet_crid='597949378';  </script>  <script id="mNSC" src="http://contextual.media.net/nmedianet.js?cid=8CU42SZB0" language="javascript"></script>
-</div>
-<!--Leaderboard Ad Block END-->
-</div>
+<div style="width:100%; background-color:#ffffff; padding:0.25%;"><div style="max-width:1200px; margin-left:auto; margin-right:auto;"><div id="logoImgHolder"><a href="http://www.insectidentification.org/" title="Insect Identification"><img src="/imgs/design/logo.png" alt="Insect Identification" width="280" height="113" border="0"></a></div><div id="searchBlockHolder"><script>(function() {var cx = 'partner-pub-5604186322601931:4778528606'; var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true; gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//www.google.com/cse/cse.js?cx=' + cx; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);})();</script><gcse:searchbox-only></gcse:searchbox-only></div><!--Search Form--></div></div><div id="hdrLdrbrdAdHolder"><!--Leaderboard START--><div id="casaleLdrbrd728"><script id="mNCC" language="javascript">  medianet_width='728';  medianet_height= '90';  medianet_crid='597949378';  </script>  <script id="mNSC" src="http://contextual.media.net/nmedianet.js?cid=8CU42SZB0" language="javascript"></script></div><!--Leaderboard END--></div>
 <!-- !!!!!!!!!!!!!!!!!!!!!!HEADER!!!!!!!!!!!!!!!!!!!!!! -->
 <!-- !!!!!!!!!!!!!!!!!!!!!!BACKGROUND IMAGE!!!!!!!!!!!!!!!!!!!!!! -->
 <div id="bgWrapper"><!-- Article BG Big Pic Wrapper START -->
