--- a/p/pr/pri/principalindia.com.html
+++ b/p/pr/pri/principalindia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the principalindia.com privacy policy that was archived on 2016-08-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160822144201id_/http%3A//principalindia.com/privacy-policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the principalindia.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606011902id_/http%3A//principalindia.com/privacy-policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"><title>
 	Principal Mutual Fund Advisors: Investment Manager &amp; Consultant India
@@ -254,7 +254,7 @@
                                         <a href="https://online.principalindia.com/online/" target="_blank">Invest Online</a>
                                     </h3>
                                     <h1 class="investor">
-                                        <a href="https://online.principalindia.com/" target="_blank">Investor Login</a>
+                                        <a href="https://online.principalindia.com/online/General/Login.aspx" target="_blank">Investor Login</a>
                                     </h1>
                                     <h1 class="distributor">
                                         <a href="https://online.principalindia.com/Distributor/" target="_blank">Distributor Login</a>
