--- a/r/ra/ran/randi.org.html
+++ b/r/ra/ran/randi.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the randi.org privacy policy that was archived on 2016-11-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161128202434id_/http%3A//web.randi.org/privacy-statement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the randi.org privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606012002id_/http%3A//web.randi.org/privacy-statement.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 		<title>PRIVACY STATEMENT - JREF</title><meta property="og:site_name" content="JREF">
@@ -55,7 +55,7 @@
 .blog-header h2 a:hover {color:#8d2424 !important;}
 </style>
 
-		<script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/files/templateArtifacts.js?1467663936"></script>
+		<script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script async="" src="//cdn2.editmysite.com/js/wsnbn/snowday262.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/files/templateArtifacts.js?1467663936"></script>
 <script><!--
 var STATIC_BASE = '//cdn1.editmysite.com/';
 var STYLE_PREFIX = 'wsite';
@@ -312,6 +312,62 @@ if (document.cookie.match(/(^|;)\s*is_mobile=1/)) {
 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 	})();
 
+	_W.Analytics = _W.Analytics || {'trackers': {}};
+	_W.Analytics.trackers.wGA = '_gaq';
+
+</script>
+
+<script type="text/javascript" async="1">
+	;(function(p,l,o,w,i,n,g){if(!p[i]){p.GlobalSnowplowNamespace=p.GlobalSnowplowNamespace||[];
+			p.GlobalSnowplowNamespace.push(i);p[i]=function(){(p[i].q=p[i].q||[]).push(arguments)
+			};p[i].q=p[i].q||[];n=l.createElement(o);g=l.getElementsByTagName(o)[0];n.async=1;
+			n.src=w;g.parentNode.insertBefore(n,g)}}(window,document,'script','//cdn2.editmysite.com/js/wsnbn/snowday262.js','snowday'));
+
+	var r = [99, 104, 101, 99, 107, 111, 117, 116, 46, 40, 119, 101, 101, 98, 108, 121, 124, 101, 100, 105, 116, 109, 121, 115, 105, 116, 101, 41, 46, 99, 111, 109];
+	var snPlObR = function(arr) {
+		var s = '';
+		for (var i = 0 ; i < arr.length ; i++){
+			s = s + String.fromCharCode(arr[i]);
+		}
+		return s;
+	};
+	var s = snPlObR(r);
+
+	var regEx = new RegExp(s);
+
+	_W.Analytics = _W.Analytics || {'trackers': {}};
+	_W.Analytics.trackers.wSP = 'snowday';
+	_W.Analytics.user_id = '37377621';
+	_W.Analytics.site_id = '426878150188277607';
+
+
+	(function(app_id, ec_hostname, discover_root_domain) {
+		var track = window[_W.Analytics.trackers.wSP];
+		if (!track) return;
+		track('newTracker', app_id, ec_hostname, {
+			appId: app_id,
+			post: true,
+			platform: 'web',
+			discoverRootDomain: discover_root_domain,
+			cookieName: '_snow_',
+			contexts: {
+				webPage: true,
+				performanceTiming: true,
+				gaCookies: true
+			},
+			crossDomainLinker: function (linkElement) {
+				return regEx.test(linkElement.href);
+			}
+		});
+		track('trackPageView', _W.Analytics.user_id+':'+_W.Analytics.site_id);
+		track('crossDomainLinker', function (linkElement) {
+			return regEx.test(linkElement.href);
+		});
+	})(
+		'_wn',
+		'ec.editmysite.com',
+		true
+	);
 </script>
 
 <!-- Quantcast Tag -->
@@ -320,7 +376,7 @@ var _qevents = _qevents || [];
 
 (function() {
 var elem = document.createElement('script');
-elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
+elem.src = "https://secure.quantserve.com/quant.js";
 elem.async = true;
 elem.type = "text/javascript";
 var scpt = document.getElementsByTagName('script')[0];
@@ -389,21 +445,22 @@ labels:"l10,u37377621.u37377621s426878150188277607"
 
 <script type="text/javascript">
 	(function($) {
-		var cookie_location = '';
-
+		window.cookie_location = '';
 		// this cookie_content should already be pre-encoded from CookieSettingView.js
-		var cookie_content = '' || _W.stl('templates.publish.virtual-includes.footerCode_1');
+		window.cookie_content = '' || _W.stl('templates.publish.virtual-includes.footerCode_1');
+		window.cookie_policy_key = '426878150188277607_cookie_policy';
+		window.cookie_content_hash = '';
 
-		if (!_W.getCookie('426878150188277607_cookie_policy') || (_W.getCookie('426878150188277607_cookie_policy') !== cookie_content)){
-			if (cookie_location === 'top' || cookie_location === 'bottom'){
-				$('#eu-cookie-content').text(decodeURIComponent(cookie_content));
-				(cookie_location === 'top') ? animateFromTop() : animateFromBottom();
+		if (!_W.getCookie(window.cookie_policy_key) || _W.getCookie(window.cookie_policy_key) !== window.cookie_content_hash){
+			if (window.cookie_location === 'top' || window.cookie_location === 'bottom'){
+				$('#eu-cookie-content').text(decodeURIComponent(window.cookie_content));
+				(window.cookie_location === 'top') ? animateFromTop() : animateFromBottom();
 				$('#eu-cookie').show();
 			}
 		}
 
 		$('#eu-cookie-close').click(function(){
-			_W.setCookie('426878150188277607_cookie_policy', cookie_content, 100000);
+			_W.setCookie(window.cookie_policy_key, window.cookie_content_hash, 100000);
 			$('#eu-cookie').hide();
 		});
 
@@ -421,9 +478,7 @@ labels:"l10,u37377621.u37377621s426878150188277607"
 			});
 		}
 	})(window._W && _W.jQuery);
-
 </script>
-
 
 	
 
