--- a/p/pu/pub/publicrecords360.com.html
+++ b/p/pu/pub/publicrecords360.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the publicrecords360.com privacy policy that was archived on 2016-10-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161029203348id_/http%3A//www.publicrecords360.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the publicrecords360.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606012008id_/http%3A//www.publicrecords360.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
 <title>Privacy Policy for PublicRecords360.com</title>
@@ -7,7 +7,7 @@
 <meta content="privacy, background check, public records, public records search, search public records, free public records" name="keywords">
 <meta content="noindex" name="robots">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link href="//p_pr360.commondatastorage.googleapis.com/css/e0ea1e62ade38fc0e83dac7a2e4e2ce1.css" type="text/css" rel="stylesheet">
+<link href="//p_pr360.commondatastorage.googleapis.com/css/343fea6ef9e218674234cffac08668c4.css" type="text/css" rel="stylesheet">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="format-detection" content="telephone=no">
 <link rel="canonical" href="http://www.publicrecords360.com/privacy.html"><link rel="alternate" type="application/rss+xml" title="Public Records Discussion Feed" href="http://pr360.disqus.com/latest.rss">
@@ -40,10 +40,10 @@
 <div class="search">
 <form action="" method="get" onsubmit="javascript:return PeopleSearch(this);">
 <div class="for_input">
-<input name="fn" type="text" value="Tyrone" class="" placeholder="First Name" onblur="SetDefault(this);" onfocus="ClearDefault(this);">
+<input name="fn" type="text" value="First Name" class="grayText" placeholder="First Name" onblur="SetDefault(this);" onfocus="ClearDefault(this);">
 </div>
 <div class="for_input">
-<input name="ln" type="text" value="Riley" class="" placeholder="Last Name" onblur="SetDefault(this);" onfocus="ClearDefault(this);">
+<input name="ln" type="text" value="Last Name" class="grayText" placeholder="Last Name" onblur="SetDefault(this);" onfocus="ClearDefault(this);">
 </div>
 <div class="for_input">
 <input name="city" type="text" value="City" class="grayText" placeholder="City" onblur="SetDefault(this);" onfocus="ClearDefault(this);">
