--- a/m/my/myn/mynicespace.com.html
+++ b/m/my/myn/mynicespace.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mynicespace.com privacy policy that was archived on 2016-11-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161113133454id_/http%3A//www.myniceprofile.com/pp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mynicespace.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606012200id_/http%3A//www.myniceprofile.com/pp) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
@@ -196,6 +196,7 @@
 </li>
 <li class="leaf-tl"><a href="custom-animated-text.html" title=""><span class="lw1">Custom Animated Text</span></a></li>
 <li class="leaf-tl"><a href="feedback" title=""><span class="lw1">Contact Us</span></a></li>
+<li class="collapsed-tl"><a href="myspace-contact-tables.html" title=""><span class="lw1">Myspace Contact Tables</span></a></li>
 
 </ul>
 </nav></div>
